--- a/gb/19/8/7/n11437711.md
+++ b/gb/19/8/7/n11437711.md
@@ -1,71 +1,69 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/clbjqp2826/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/clbjqp2826/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/clbjqp2826/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/clbjqp2826/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/clbjqp2826/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/clbjqp2826/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/clbjqp2826/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/clbjqp2826/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/clbjqp2826/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/clbjqp2826/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/clbjqp2826/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/clbjqp2826/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/clbjqp2826/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/clbjqp2826/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/clbjqp2826/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/clbjqp2826/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/clbjqp2826/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/clbjqp2826/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/clbjqp2826/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/clbjqp2826/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/clbjqp2826/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
-<img src="http://i.epochtimes.com/assets/uploads/2017/12/1710150008401973-600x400.jpg" />
-<h6>Í¼Îª2017Äê10ÔÂ14ÈÕÍí£¬ÉñÔÏ½»ÏìÀÖÍÅÔÚÅ¦Ô¼¿¨ÄÚ»ù´óÌü£¨Carnegie Hall£©µÄÑÝ³ö¡££¨´÷±ø£¯´ó¼ÍÔª£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>2019ç¥žéŸµäº¤å“ä¹ å¡å†…åŸºæ¼”ç»Žçˆ±æƒ…ä¹ç« </h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2017/12/1710150008401973-600x400.jpg" />
+<h6>å›¾ä¸º2017å¹´10æœˆ14æ—¥æ™šï¼Œç¥žéŸµäº¤å“ä¹å›¢åœ¨çº½çº¦å¡å†…åŸºå¤§åŽ…ï¼ˆCarnegie Hallï¼‰çš„æ¼”å‡ºã€‚ï¼ˆæˆ´å…µï¼å¤§çºªå…ƒï¼‰
 </h6>
 <hr>
-	<p>¡¾´ó¼ÍÔª2019Äê08ÔÂ07ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÊ©Æ¼±¨µ¼£©½ñÌì£¨8ÔÂ7ÈÕ£©ÊÇÖÐ¹ú»ÆÀúµÄÆßÔÂ³õÆß£¬Ïà´«ÊÇÌìÉÏµÄÖ¯Å®ÓëÅ£ÀÉÈµÇÅÏà»áµÄÈÕ×Ó¡£Ç§°ÙÄêÀ´£¬ÈËÃÇÓÚ´ËÊ±ÑöÍûÐÇ¿Õ£¬Ò÷ËÌÄÇÊ¤È´ÈË¼äÎÞÊýµÄÏà·êÊ±¿Ì£¬Ë¼ÄîÄÇÈáÇéËÆË®µÄÐÄÉÏÈË¡£</p>
-<p>ÎÞÂÛÊÇÖÐ¹úµÄÁº×£´«Ææ£¬»¹ÊÇÎ÷·½µÄÂÞÃÜÅ·ÓëÖìÀöÒ¶£¬ÖÒÕê²»ÓåµÄ°®Çé¹ÊÊÂÒ»Ö±ÊÇÈËÀà´«³ª²»Ï¢µÄÓÀºãÖ÷Ìâ¡£</p>
-<p>½ñÄêÇïÌì£¬<a href="https://github.com/clbjqp2826/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E4%BA%A4%E5%93%8D%E4%B9%90.md">ÉñÔÏ½»ÏìÀÖ</a>ÍÅÔÚ<a href="https://github.com/clbjqp2826/djy/blob/master/gb/tag/%E5%8D%A1%E5%86%85%E5%9F%BA.md">¿¨ÄÚ»ù</a>µÄÒôÀÖ»á¾Í½«ÉÏÑÝÕâÑù¶¯ÈËÐÄÏÒµÄÇúÄ¿¡£ÕâÊÇÏíÓþÈ«ÇòµÄÉñÔÏÒÕÊõÍÅÎª¹ÛÖÚÇãÐÄ´òÔìµÄ2019Äê½»ÏìÀÖÑÝ³ö¡£ÆäÖÐ¼ÈÓÐÉñÔÏÔ­´´ÒôÀÖ£¬Ò²ÓÐ¹ÅµäÃûÇú£¬Èç²ñ¿É·òË¹»ùµÄWaltz-ScherzoÚ¶Ð³Ô²ÎèÇú£¬×÷Æ·µÚ34ºÅ£»¹ÅÅµµÄÂÞÃÜÅ·ÓëÖìÀöÒ¶µÚËÄÄ»½øÐÐÇú£¬µÈµÈ¡£</p>
-<p><a href="https://github.com/clbjqp2826/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E4%BA%A4%E5%93%8D%E4%B9%90.md">ÉñÔÏ½»ÏìÀÖ</a>ÒÔÍêÕûµÄÎ÷·½½»ÏìÀÖÎªÔØÌå£¬ÈÚºÏ¹ÅÀÏµÄÖÐ¹úÀÖÆ÷£¬ÈçÒÔ<a href="https://github.com/clbjqp2826/djy/blob/master/gb/tag/%E4%BA%8C%E8%83%A1.md">¶þºú</a>¡¢<a href="https://github.com/clbjqp2826/djy/blob/master/gb/tag/%E7%90%B5%E7%90%B6.md">ÅýÅÃ</a>ÒÔ¼°´ò»÷ÀÖÎªÁì×à£¬È«ÐÂÑÝÒïÕâÐ©ÈËÀàÀúÊ·ÉÏ³¤¾ÃÁ÷´«µÄ°®ÇéÀÖÕÂ¡£</p>
-<p>ÉñÔÏÔ­´´ÒôÀÖ³É¹¦½áºÏÁË¶«Î÷·½ÕýÍ³ÒôÀÖµÄ¾«Ëè£¬ÒÔÎ÷·½¹ÜÏÒÀÖÎª»ùµìºæÍÐÖÐ¹úÀÖÆ÷µÄÌØÉ«¡£ÒÔ¹ÅÀÏÖÐ¹úÒôÀÖµÄÐýÂÉÔÏÎ¶Îª»ù´¡£¬ÓÃÎ÷·½¹ÜÏÒÀÖÀ´±íÏÖÉñÔÏËùÐèÒªµÄÐ§¹û£¬ÕâÊÇÐÂµÄ¿ª´´£¬ÊÇÉñÔÏµÄÒôÀÖÌØµã ¡£</p>
-<p>ÖÐ¹úÓÐÎåÇ§ÄêÎÄ»¯£¬ÓÐ·á¸»µÄ´´×÷Ô´Èª¡£ÉñÔÏÊ¹ÓÃÎ÷·½½»ÏìÀÖ¶ÓÎª»ùµì£¬½áºÏÖÐ¹úÀÖÆ÷¸üÓÐÐ§µØÂú×ãÁËÏÖ´úÈË¶ÔÒôÀÖµÄÌý¾õÏ°¹ß¡£</p>
-<p>ÔÚ¹ýÈ¥Ê®¼¸ÄêµÄÑÝ³öÖÐ£¬ÊÀ½ç¸÷µØµÄ¹ÛÖÚ¶¼±»ÉñÔÏ½»ÏìÀÖÖÐÎ÷ºÏèµµÄ¶ÀÌØÁ¦ËùÕðº³¡£ÒôÀÖ¼ÒÃÇÔÞÃÀÉñÔÏÒôÀÖµÄ¶¥¼¶×¨ÒµË®Æ½ÓëÒÕÊõ´´ÐÂ¡£</p>
-<p>Å¦Ô¼ÖøÃûÒôÀÖ¼Ò¡¢×÷Çú¼ÒTomaczek BednarekÔÚ½ñÄêÒ»ÔÂ¹Û¿´ÉñÔÏÑÝ³öºóÔÞÌ¾£¬ÉñÔÏÒôÀÖ¡°¶ÀÌØ¡±ºÍ¡°ÓÐÁ¦¡±£¬¡°ÓàÒôÈÆÁº¡±¡£¡°ÒôÀÖºÜÌØ±ð£¬ÕæÊÇÁ¦Á¿Ç¿´ó£¬ËýÄÜ´øÄãÌ¤ÉÏÉúÃüµÄÂÃ³Ì£¬Ëù³ÊÏÖ¸øÄãµÄÄÇÖÖÃÀÃîÊÇÄãÏ£ÍûÒ»ÔÙÖØÎÂµÄ¡£¡±ÎÞÂÛÊÇ¸ÖÇÙ»¹ÊÇ<a href="https://github.com/clbjqp2826/djy/blob/master/gb/tag/%E4%BA%8C%E8%83%A1.md">¶þºú</a>£¬ËûÈÏÎªÊÇ¡°ÄÇÑùÃÀÃî¶¯ÈË¡±¡¢¡°³öÉñÈë»¯¡±¡¢¡°ÓàÒôÈÆÁº¡±¡£</p>
-<p>Ì¨ÍåºÏ³ªÍÅÍÅ³¤¼æÖ¸»ÓÎâºêè°Á¬Ðø12Äê¿´ÉñÔÏÑÝ³ö£¬ËûËµÉñÔÏÃ¿ÄêÓÐ´´ÐÂ£¬Ã¿´Î£¨¿´ÉñÔÏ£©¶¼ÊÇ¡°ÔÚ¸ú´óÊ¦Ñ§Ï°¡±¡£¡°ÌÉÔÚÄÇ±ßÎÒ¼¸ºõÄÔ²¨¶¼ÔÚ£¬ÔÚ¸ÐÊÜÄÇ¸ö¸Ð¾õÒÔÍâ£¬¾ÍÊÇ£¬Ò»Ö±ÔÚË¼¿¼ÔÚÏë£¬ÒòÎªÃ¿Äê¶¼ÓÐºÜ¶à´´ÐÂµÄ¶«Î÷£¬Äã²»ÒªÒÔÎªÄã¿´ÁËÒ»³¡ÉñÔÏ£¬¾ÍËµÎÒ¿´¹ýÁË£¬ÄãÃ¿ÄêÒªÈ¥¿´£¬ÒòÎªËýÃ¿Äê¶¼ÔÚ±ä»¯¡£¡±</p>
-<p>¸÷½ç¹ÛÖÚ¸ÐÌ¾ÉñÔÏÒôÀÖµÄ¾»»¯ÉíÌå¡¢Õðº³Áé»êµÄ¸ÐÊÜ£¬ËûÃÇºÜ¶àÈËÌýÍêÒôÀÖ»áÈÈÀáÓ¯¿ô¡£</p>
-<p>¡°ÄãÄÜ¸Ð¾õËý£¨µÄÄÜÁ¿£©´©Í¸ÄãµÄÉíÌå£¬ÔÙ´ø»Øµ½ÎèÌ¨ÉÏ£¬ÕæÊÇÃÀÃîµÄÏíÊÜ¡£¡±Å¦Ô¼¹ÛÖÚMichael RogersÔÞÌ¾µÀ¡£</p>
-<p>Å¦Ô¼¹ÛÖÚAngelica RossiËµ£º¡°£¨ÉñÔÏ½»ÏìÀÖ£©ËýÓÐ»îÁ¦£¬¼¤µ´ÄãµÄÁé»ê£¬ÁîÈËÕñ·Ü£¬ÈÃÎÒÑÛÖÐÓ¯ÂúÀáË®¡£¡±</p>
-<p>Å¦Ô¼¹ÛÖÚMichael Shirts±íÊ¾ºÜ¶àÄêÃ»À´<a href="https://github.com/clbjqp2826/djy/blob/master/gb/tag/%E5%8D%A1%E5%86%85%E5%9F%BA.md">¿¨ÄÚ»ù</a>ÁË£¬Õâ´ÎÎªÁËÉñÔÏ½»ÏìÀÖÓÖÀ´ÁË£¬¸Ðµ½ºÜ¸ßÐË¡£</p>
-<p>¡°ÎÒÏëÏÂ´ÎÔÙÀ´£¡¡±Å¦Ô¼¹ÛÖÚPatricia DonnellyËµ¡£</p>
-<p>¡°ÎÒÏò´ó¼Ò´óÁ¦ÍÆ¼ö£¡ÕâÊÇÕæÕýÖµµÃ¿´µÄ¶«Î÷£¡¡±Å¦Ô¼×÷¼ÒAgnes BristowÍÆ¼öËµ¡£</p>
-<p>Èç¹ûÄãÏëÈÃ×Ô¼ºµÄÁé»ê³Á½þÔÚ¹ÅµäÀËÂþµÄ·ÕÎ§ÖÐ£¬ÖØÐÂÌå»áÄÇµ´Æø»Ø³¦µÄËÆº£ÉîÇéµÄ»°£¬ÄÇ¾ÍÇëÓÚ10ÔÂ12ÈÕÀ´¿¨ÄÚ»ù°É£¬¶©Æ±ÍøÖ·£º<a href="https://www.shenyun.com/symphony/tickets" target="_blank" rel="noopener noreferrer">https://www.shenyun.com/symphony/tickets</a>? ? #</p>
-<p>ÔðÈÎ±à¼­£ºÕÅÏÜÒå</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´08æœˆ07æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…æ–½èæŠ¥å¯¼ï¼‰ä»Šå¤©ï¼ˆ8æœˆ7æ—¥ï¼‰æ˜¯ä¸­å›½é»„åŽ†çš„ä¸ƒæœˆåˆä¸ƒï¼Œç›¸ä¼ æ˜¯å¤©ä¸Šçš„ç»‡å¥³ä¸Žç‰›éƒŽé¹Šæ¡¥ç›¸ä¼šçš„æ—¥å­ã€‚åƒç™¾å¹´æ¥ï¼Œäººä»¬äºŽæ­¤æ—¶ä»°æœ›æ˜Ÿç©ºï¼ŒåŸé¢‚é‚£èƒœå´äººé—´æ— æ•°çš„ç›¸é€¢æ—¶åˆ»ï¼Œæ€å¿µé‚£æŸ”æƒ…ä¼¼æ°´çš„å¿ƒä¸Šäººã€‚</p>
+<p>æ— è®ºæ˜¯ä¸­å›½çš„æ¢ç¥ä¼ å¥‡ï¼Œè¿˜æ˜¯è¥¿æ–¹çš„ç½—å¯†æ¬§ä¸Žæœ±ä¸½å¶ï¼Œå¿ è´žä¸æ¸çš„çˆ±æƒ…æ•…äº‹ä¸€ç›´æ˜¯äººç±»ä¼ å”±ä¸æ¯çš„æ°¸æ’ä¸»é¢˜ã€‚</p>
+<p>ä»Šå¹´ç§‹å¤©ï¼Œ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E4%BA%A4%E5%93%8D%E4%B9%90.md#1">ç¥žéŸµäº¤å“ä¹</a>å›¢åœ¨<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8D%A1%E5%86%85%E5%9F%BA.md#1">å¡å†…åŸº</a>çš„éŸ³ä¹ä¼šå°±å°†ä¸Šæ¼”è¿™æ ·åŠ¨äººå¿ƒå¼¦çš„æ›²ç›®ã€‚è¿™æ˜¯äº«èª‰å…¨çƒçš„ç¥žéŸµè‰ºæœ¯å›¢ä¸ºè§‚ä¼—å€¾å¿ƒæ‰“é€ çš„2019å¹´äº¤å“ä¹æ¼”å‡ºã€‚å…¶ä¸­æ—¢æœ‰ç¥žéŸµåŽŸåˆ›éŸ³ä¹ï¼Œä¹Ÿæœ‰å¤å…¸åæ›²ï¼Œå¦‚æŸ´å¯å¤«æ–¯åŸºçš„Waltz-Scherzoè¯™è°åœ†èˆžæ›²ï¼Œä½œå“ç¬¬34å·ï¼›å¤è¯ºçš„ç½—å¯†æ¬§ä¸Žæœ±ä¸½å¶ç¬¬å››å¹•è¿›è¡Œæ›²ï¼Œç­‰ç­‰ã€‚</p>
+<p><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E4%BA%A4%E5%93%8D%E4%B9%90.md#1">ç¥žéŸµäº¤å“ä¹</a>ä»¥å®Œæ•´çš„è¥¿æ–¹äº¤å“ä¹ä¸ºè½½ä½“ï¼Œèžåˆå¤è€çš„ä¸­å›½ä¹å™¨ï¼Œå¦‚ä»¥<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BA%8C%E8%83%A1.md#1">äºŒèƒ¡</a>ã€<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%90%B5%E7%90%B6.md#1">çµç¶</a>ä»¥åŠæ‰“å‡»ä¹ä¸ºé¢†å¥ï¼Œå…¨æ–°æ¼”ç»Žè¿™äº›äººç±»åŽ†å²ä¸Šé•¿ä¹…æµä¼ çš„çˆ±æƒ…ä¹ç« ã€‚</p>
+<p>ç¥žéŸµåŽŸåˆ›éŸ³ä¹æˆåŠŸç»“åˆäº†ä¸œè¥¿æ–¹æ­£ç»ŸéŸ³ä¹çš„ç²¾é«“ï¼Œä»¥è¥¿æ–¹ç®¡å¼¦ä¹ä¸ºåŸºå¥ çƒ˜æ‰˜ä¸­å›½ä¹å™¨çš„ç‰¹è‰²ã€‚ä»¥å¤è€ä¸­å›½éŸ³ä¹çš„æ—‹å¾‹éŸµå‘³ä¸ºåŸºç¡€ï¼Œç”¨è¥¿æ–¹ç®¡å¼¦ä¹æ¥è¡¨çŽ°ç¥žéŸµæ‰€éœ€è¦çš„æ•ˆæžœï¼Œè¿™æ˜¯æ–°çš„å¼€åˆ›ï¼Œæ˜¯ç¥žéŸµçš„éŸ³ä¹ç‰¹ç‚¹ ã€‚</p>
+<p>ä¸­å›½æœ‰äº”åƒå¹´æ–‡åŒ–ï¼Œæœ‰ä¸°å¯Œçš„åˆ›ä½œæºæ³‰ã€‚ç¥žéŸµä½¿ç”¨è¥¿æ–¹äº¤å“ä¹é˜Ÿä¸ºåŸºå¥ ï¼Œç»“åˆä¸­å›½ä¹å™¨æ›´æœ‰æ•ˆåœ°æ»¡è¶³äº†çŽ°ä»£äººå¯¹éŸ³ä¹çš„å¬è§‰ä¹ æƒ¯ã€‚</p>
+<p>åœ¨è¿‡åŽ»åå‡ å¹´çš„æ¼”å‡ºä¸­ï¼Œä¸–ç•Œå„åœ°çš„è§‚ä¼—éƒ½è¢«ç¥žéŸµäº¤å“ä¹ä¸­è¥¿åˆç’§çš„ç‹¬ç‰¹åŠ›æ‰€éœ‡æ’¼ã€‚éŸ³ä¹å®¶ä»¬èµžç¾Žç¥žéŸµéŸ³ä¹çš„é¡¶çº§ä¸“ä¸šæ°´å¹³ä¸Žè‰ºæœ¯åˆ›æ–°ã€‚</p>
+<p>çº½çº¦è‘—åéŸ³ä¹å®¶ã€ä½œæ›²å®¶Tomaczek Bednarekåœ¨ä»Šå¹´ä¸€æœˆè§‚çœ‹ç¥žéŸµæ¼”å‡ºåŽèµžå¹ï¼Œç¥žéŸµéŸ³ä¹â€œç‹¬ç‰¹â€å’Œâ€œæœ‰åŠ›â€ï¼Œâ€œä½™éŸ³ç»•æ¢â€ã€‚â€œéŸ³ä¹å¾ˆç‰¹åˆ«ï¼ŒçœŸæ˜¯åŠ›é‡å¼ºå¤§ï¼Œå¥¹èƒ½å¸¦ä½ è¸ä¸Šç”Ÿå‘½çš„æ—…ç¨‹ï¼Œæ‰€å‘ˆçŽ°ç»™ä½ çš„é‚£ç§ç¾Žå¦™æ˜¯ä½ å¸Œæœ›ä¸€å†é‡æ¸©çš„ã€‚â€æ— è®ºæ˜¯é’¢ç´è¿˜æ˜¯<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BA%8C%E8%83%A1.md#1">äºŒèƒ¡</a>ï¼Œä»–è®¤ä¸ºæ˜¯â€œé‚£æ ·ç¾Žå¦™åŠ¨äººâ€ã€â€œå‡ºç¥žå…¥åŒ–â€ã€â€œä½™éŸ³ç»•æ¢â€ã€‚</p>
+<p>å°æ¹¾åˆå”±å›¢å›¢é•¿å…¼æŒ‡æŒ¥å´å®ç’‹è¿žç»­12å¹´çœ‹ç¥žéŸµæ¼”å‡ºï¼Œä»–è¯´ç¥žéŸµæ¯å¹´æœ‰åˆ›æ–°ï¼Œæ¯æ¬¡ï¼ˆçœ‹ç¥žéŸµï¼‰éƒ½æ˜¯â€œåœ¨è·Ÿå¤§å¸ˆå­¦ä¹ â€ã€‚â€œèººåœ¨é‚£è¾¹æˆ‘å‡ ä¹Žè„‘æ³¢éƒ½åœ¨ï¼Œåœ¨æ„Ÿå—é‚£ä¸ªæ„Ÿè§‰ä»¥å¤–ï¼Œå°±æ˜¯ï¼Œä¸€ç›´åœ¨æ€è€ƒåœ¨æƒ³ï¼Œå› ä¸ºæ¯å¹´éƒ½æœ‰å¾ˆå¤šåˆ›æ–°çš„ä¸œè¥¿ï¼Œä½ ä¸è¦ä»¥ä¸ºä½ çœ‹äº†ä¸€åœºç¥žéŸµï¼Œå°±è¯´æˆ‘çœ‹è¿‡äº†ï¼Œä½ æ¯å¹´è¦åŽ»çœ‹ï¼Œå› ä¸ºå¥¹æ¯å¹´éƒ½åœ¨å˜åŒ–ã€‚â€</p>
+<p>å„ç•Œè§‚ä¼—æ„Ÿå¹ç¥žéŸµéŸ³ä¹çš„å‡€åŒ–èº«ä½“ã€éœ‡æ’¼çµé­‚çš„æ„Ÿå—ï¼Œä»–ä»¬å¾ˆå¤šäººå¬å®ŒéŸ³ä¹ä¼šçƒ­æ³ªç›ˆçœ¶ã€‚</p>
+<p>â€œä½ èƒ½æ„Ÿè§‰å¥¹ï¼ˆçš„èƒ½é‡ï¼‰ç©¿é€ä½ çš„èº«ä½“ï¼Œå†å¸¦å›žåˆ°èˆžå°ä¸Šï¼ŒçœŸæ˜¯ç¾Žå¦™çš„äº«å—ã€‚â€çº½çº¦è§‚ä¼—Michael Rogersèµžå¹é“ã€‚</p>
+<p>çº½çº¦è§‚ä¼—Angelica Rossiè¯´ï¼šâ€œï¼ˆç¥žéŸµäº¤å“ä¹ï¼‰å¥¹æœ‰æ´»åŠ›ï¼Œæ¿€è¡ä½ çš„çµé­‚ï¼Œä»¤äººæŒ¯å¥‹ï¼Œè®©æˆ‘çœ¼ä¸­ç›ˆæ»¡æ³ªæ°´ã€‚â€</p>
+<p>çº½çº¦è§‚ä¼—Michael Shirtsè¡¨ç¤ºå¾ˆå¤šå¹´æ²¡æ¥<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8D%A1%E5%86%85%E5%9F%BA.md#1">å¡å†…åŸº</a>äº†ï¼Œè¿™æ¬¡ä¸ºäº†ç¥žéŸµäº¤å“ä¹åˆæ¥äº†ï¼Œæ„Ÿåˆ°å¾ˆé«˜å…´ã€‚</p>
+<p>â€œæˆ‘æƒ³ä¸‹æ¬¡å†æ¥ï¼â€çº½çº¦è§‚ä¼—Patricia Donnellyè¯´ã€‚</p>
+<p>â€œæˆ‘å‘å¤§å®¶å¤§åŠ›æŽ¨èï¼è¿™æ˜¯çœŸæ­£å€¼å¾—çœ‹çš„ä¸œè¥¿ï¼â€çº½çº¦ä½œå®¶Agnes BristowæŽ¨èè¯´ã€‚</p>
+<p>å¦‚æžœä½ æƒ³è®©è‡ªå·±çš„çµé­‚æ²‰æµ¸åœ¨å¤å…¸æµªæ¼«çš„æ°›å›´ä¸­ï¼Œé‡æ–°ä½“ä¼šé‚£è¡æ°”å›žè‚ çš„ä¼¼æµ·æ·±æƒ…çš„è¯ï¼Œé‚£å°±è¯·äºŽ10æœˆ12æ—¥æ¥å¡å†…åŸºå§ï¼Œè®¢ç¥¨ç½‘å€ï¼š<ahref="https://www.shenyun.com/symphony/tickets" target="_blank" rel="noopener noreferrer">https://www.shenyun.com/symphony/tickets</a>? ? #</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šå¼ å®ªä¹‰</p>
+
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/8/7/n11437711.htm"></a>
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/3/1/n11081513.htm">¶¼»áÄÐÅ®»á¿ÍÊÒ£ºÏëÍì»ØÄÐÓÑ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/14/n10975230.htm">¶¼»áÄÐÅ®»á¿ÍÊÒ£ºÄÐÓÑÖ¬·¾¸Î£¬¼ÒÈËÈ°·ÖÊÖ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/12/17/n10915482.htm">¶¼»áÄÐÅ®»á¿ÍÊÒ£º¸¸Ä¸¶ÔÄÐÓÑ²»ÓÑÉÆ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/11/26/n10875184.htm">¶¼»áÄÐÅ®»á¿ÍÊÒ£º¶ÔÓÚÎ´À´£¬ÄÐÓÑ×°Éµ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/4/1/n10267454.htm">¶¼»áÄÐÅ®»á¿ÍÊÒ£ºÄÐÓÑ²»ÐÞ±ß·ù ÂèÂèºÜÓÐÒâ¼û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/1/30/n10100327.htm">¶¼»áÄÐÅ®»á¿ÍÊÒ£ºÈçºÎ¶ÔÄÐÓÑµÄ¹ýÈ¥ÊÍ»³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/1/28/n10094526.htm">¶¼»áÄÐÅ®»á¿ÍÊÒ£ºÄÐÓÑÌåÈõ¶à²¡ ¸Ã·ÖÊÖÂð£¿</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/10/7/n11572597.htm">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£ºËÄÖÐÈ«»áÏ°¼ªÐ×ÄÑ²·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/7/n11573419.htm">ÃÀ¾üÑÐ·¢¿É¸Ä±ä½á¹¹µÄÒºÌ¬½ðÊô Èç¿Æ»ÃµçÓ°</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/7/n11573509.htm">NBAÒò·´ËÍÖÐÑÔÂÛµÀÇ¸ Ó¢ÃÀ¶àÃûÒéÔ±Ç´Ôð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/7/n11572594.htm">ÆØÖÐ¹²¶à¸öÃô¸Ð»°Ìâ ÃÀ¾ç¡¶ÄÏ·½¹«Ô°¡·±»½û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/29/n11554590.htm">Ô¤ÑÔÖÐµÄÖÐ¹²ÃðÍöÊ±¼ä¼°Ç°ºóÖØ´óÊÂ¼þ£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/12/4/28/n3576538.htm">¼¾Ôý¹Ò½££ºÊ²Ã´ÊÇ³ÐÅµ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/2/n11563670.htm">³­Ð´ÁËÁ½°Ù¾í·ð¾­ ÎªºÎËû×îÖÕ»¹»áÏÂµØÓü£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/4/n11568273.htm">±»Çú½âµÄ³ÉÓï£ºñºñ»ÊçÅ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/7/n11573172.htm">Ì©¹úÐ¡ÏóµôÂäÆÙ²¼Àï 5Í·´óÏóÎª¾ÈËüÉ¥Ãü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/7/n11573759.htm">´÷ÒþÐÎÑÛ¾µÉËÑÛ µ÷²é£º93%ÈËºöÂÔÁËÒ»¸öÎÊÌâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/7/n11573915.htm">¼ÓÄÃ´ó·¿×Ó¿ÕÖÃÎÞÈË×¡Ì«ÆÕ±é</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/7/n11573740.htm">×Ô·ÑÌ«¿ÕÂÃÐÐ¼´½«³ÉÕæ ÂÃ·ÑÖª¶àÉÙ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/6/n11572379.htm">ÎªºÎ×¸ÈâÆ«°®¸¹²¿£¿Ò½Ê¦·ÖÏíÊÝÐ¡¸¹7¸öÃØ¾÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/7/n11574050.htm">¡¾ÐÂÎÅ¿´µã¡¿Ô½ÄÖÔ½´ó ÁÖÖ£ÌýÃü±±¾©×ßÉÏ²»¹éÂ·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/7/n11572707.htm">¡¾ÅÄ°¸¾ªÆæ¡¿Ïã¸ÛÖÜÄ©ÂÒÕ½ ÖÐ¹²¾üÓªÊ×¾Ù»ÆÆì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/5/n11569414.htm">¡¾ÅÄ°¸¾ªÆæ¡¿½ûÃÉÃæ·¨Óë¾ü³µÍ¬ÏÖ Ïã¸ÛÎ£»ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/5/n11570750.htm">Èç¹ûÄãÊÇ³µÖ÷ ÔÚCostco¿É»ñµÃ°ËÖÖÓÅ»Ý</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/6/n11571449.htm">Ì¨ÍåËÄ´óµç×Ó¾ÞÍ·Õý×¼±¸³·Àë´óÂ½</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/6/n11571866.htm">Ïã¸Û¸ã»µÁË ÖÐ¹²¾ÍÊÇÃñ×å×ïÈË ÖìéF»ù½²»°ÈÈ´«</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/5/n11569838.htm">µÚ54½ì½ðÖÓ½±µÃ½±Ãûµ¥ ¡¶Óë¶ñ¡·¼Ö¾²ö©·âºó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/5/n11570726.htm">Ïã¸Û¸èÊÖ»ÆÒ«Ã÷Å­³â£ºÁÖÖ£ÔÂ¶ðÊÇÇ§¹Å×ïÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/5/n11570552.htm">Íõ×ÚÒ¢Í­ÂàÍå¹ä½Ö °ï³Ä¸Û½ã¹Ú¾üÌ·Ð¡»·Ð¡Ê³µê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/5/n11569720.htm">ÃÀ¸èÊÖ²úºó6ÔÂÊÝ45¹«½ï ÊÝÉí·½·¨ÈËÈË×öµÃµ½</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/5/n11569768.htm">ËÉÛàÇì×ÓÑÝ¡¶ÅÉÇ²Å®Ò½X6¡·ÆÚ´ý±»Ã×²ÖÅÄ¼ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/29/n11554590.htm">Ô¤ÑÔÖÐµÄÖÐ¹²ÃðÍöÊ±¼ä¼°Ç°ºóÖØ´óÊÂ¼þ£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/12/4/28/n3576538.htm">¼¾Ôý¹Ò½££ºÊ²Ã´ÊÇ³ÐÅµ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/2/n11563670.htm">³­Ð´ÁËÁ½°Ù¾í·ð¾­ ÎªºÎËû×îÖÕ»¹»áÏÂµØÓü£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/4/n11568273.htm">±»Çú½âµÄ³ÉÓï£ºñºñ»ÊçÅ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/3/31/n10265703.htm">¡¾Ãû¾ä¹ÊÊÂ¡¿ÈËÉúÈç³¯Â¶</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/11/13/n10849459.md#1">æ–°å”äººæ„Ÿæ©èŠ‚æ’­å‡º ç¥žéŸµäº¤å“ä¹å›¢æ¼”å‡º</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/9/n10772427.md#1">ç¥žéŸµäº¤å“ä¹å›¢åŽåºœå·¡æ¼”åœ¨å³ æ”¿è¦è¤’å¥–ç¥è´º</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/5/n10764220.md#1">ç¥žéŸµäº¤å“ä¹å›¢10/13æ³¢å£«é¡¿æ¼”å‡º</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/5/n10762118.md#1">ç¥žéŸµäº¤å“ä¹å›¢æŠµå¤šä¼¦å¤š å¼€å¯åŒ—ç¾Žå·¡æ¼”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/9/29/n10749987.md#1">å‘Šåˆ«çƒ­æƒ…å°æ¹¾ä¹è¿· ç¥žéŸµäº¤å“ä¹å›¢æŠµéŸ©å›½æ¼”å‡º</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/9/17/n10721641.md#1">å‰æ€»ç»Ÿé™ˆæ°´æ‰æ„ŸåŠ¨ â€œç¥žéŸµäº¤å“ä¹å›¢å¾ˆäº†ä¸èµ·â€</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/clbjqp2826/djy/blob/master/gb/19/8/7/n11437711.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/clbjqp2826/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/clbjqp2826/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/clbjqp2826/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/clbjqp2826/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/clbjqp2826/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">æ¾³åŒ»å­¦åä¼šè¥¿æ¾³ä¸»å¸­ï¼šå­¦æ ¡å°†å…³é—­</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10018540.md#1" target="_blank">æˆå‰§å®¶è‹±è‹¥è¯šçš„çº¿äººç”Ÿæ¶¯</a></li><li><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank">æ°¸æ’çš„è§è¯</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385414.md#1" target="_blank">20å¹´å‰ æ¾³æ´²è¥¿äººä¸ºæ³•è½®åŠŸèµ´äº¬ä¸Šè®¿ï¼ˆä¸‹ï¼‰</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">ä¸­å…±å‘è¨€äººèµ–ç¾Žå†›å¸¦ç–«æƒ…åˆ°æ­¦æ±‰ å›½é™…å“—ç„¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">é™ˆæ—¶ä¸­ï¼šä¸­å…±è°ˆç–«æƒ…æ²¡äººä¿¡ WHOä»€ä¹ˆéƒ½ä¸è¯´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">ã€æœ€æ–°ç–«æƒ…3.13ã€‘å·æ™®ï¼šæˆ‘å’Œä¹ éƒ½çŸ¥ç—…æ¯’æ¥æº</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">ç¾Žå›½CDCæ‰¿è®¤äº†ä»€ä¹ˆï¼Ÿä¸­å…±å†é€ å‡</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">å¤ä»Šä¸­å¤–é¢„è¨€ä¸­çš„2020å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">ã€æ–‡å²ã€‘ä¸ºä¸€åœºåœ°éœ‡ å†¥ç•Œç­¹å¤‡äº†50å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">çš‡ä¸Šå¯¹è—è™«è¯´äº†ä¸€å¥è¯ æ¼«å¤©è—ç¾å½»åº•æ¶ˆå¤±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">ä¸­å›½ç­‰å›½ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼ŸçŠ¹å¤ªæ‹‰æ¯”ï¼šç¥žåœ¨é™¤æ¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">ä¼ é’Ÿå—å±±è¢«å…èŒ ä¸“å®¶ç»„ç»„é•¿æ‚„æ‚„æ¢äººå†…å¹•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å‘å“¨äººå¼•çˆ†èˆ†æƒ… ä¹ è®¿æ­¦æ±‰ å®˜å®£ç ´äº§</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">å­æ„Ÿé«˜ä»·èœå¼•çˆ†å¤§è§„æ¨¡æŠ—è®® å¸‚æ°‘æ€’å–Šâ€œä¸‹è¯¾â€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ç”©é”…ç¾Žå†› ä¸­å…±å¤–äº¤éƒ¨æ¼”åŒç°§ï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">ã€ç½—åŽ¨å¯»å‘³ã€‘è…Šå‘³ç‚’è·å…°è±†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">çˆ¶æ¯æŸ“ç–«åŽ»ä¸– æ­¦æ±‰é’å±±åŒºçˆ†å­¤å„¿éš”ç¦»ç‚¹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">ä¸–å«æ”¹æ­¦æ±‰è‚ºç‚Žåç§° é»„ç§‹ç”Ÿæ–¥è´£èŽ·ç½‘å‹èµžçˆ†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">â€œå¥³ç‰ˆé»„å®‰â€åˆ˜ä¹å¦è¿”å°ä½é™¢ç”¨å¥ä¿ ç½‘å‹ç‚®è½°</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">ä¼ ä¸­å…±å¹¿ç”µå±€ä¸‹é™ç±ä»¤ åˆ˜äº¦è²å´äº¦å‡¡æˆ–å—å½±å“</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">æ„å¤§åˆ©ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼Ÿæ„è£”å°æ¹¾ç”·æ˜ŸæžåŽŸå› </a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">å´äº¦å‡¡ä»ŽåŠ å›½å›žä¸­å›½å¤å·¥ ä¸€æŠµè¾¾ä¾¿è¢«å¸¦èµ°éš”ç¦»</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/8/7/n11437711.htm">2019ç¥žéŸµäº¤å“ä¹ å¡å†…åŸºæ¼”ç»Žçˆ±æƒ…ä¹ç« </a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/8/7/n11437711.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
